[gd_scene format=3 uid="uid://b04nlv4as4wmh"]

[ext_resource type="Script" uid="uid://by38tuy3lp4qt" path="res://defeat_screen.gd" id="1_rbj83"]
[ext_resource type="AudioStream" uid="uid://c68xiirm1cprh" path="res://Music/SFX/Defeated.ogg" id="2_qyds9"]

[sub_resource type="Animation" id="Animation_qyds8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressKeyLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r8dr5"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressKeyLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.19607843), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7yehl"]
resource_name = "blink_1"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressKeyLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rax26"]
_data = {
&"RESET": SubResource("Animation_qyds8"),
&"blink": SubResource("Animation_r8dr5"),
&"blink_1": SubResource("Animation_7yehl")
}

[node name="DefeatScreen" type="Control" unique_id=1816913603]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbj83")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1369721155]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30601564, 0.043079756, 0.05963298, 0.5882353)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=512337633]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefeatLabel" type="Label" parent="VBoxContainer" unique_id=826140103]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "失败"
horizontal_alignment = 1

[node name="PressKeyLabel" type="Label" parent="VBoxContainer" unique_id=1376986330]
layout_mode = 2
text = "按任意键重新开始本关"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=49413651]
root_node = NodePath("../VBoxContainer")
libraries/ = SubResource("AnimationLibrary_rax26")
autoplay = &"blink_1"

[node name="VictorySound" type="AudioStreamPlayer" parent="." unique_id=833521380]
stream = ExtResource("2_qyds9")
